added parsing Proof of Concept

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://gitlab.com/fourzerofour/pdf-parser-nodejs#readme",
   "dependencies": {
     "exceljs": "^4.4.0",
+    "mathjs": "^12.3.0",
     "pdfreader": "^1.2.14"
   }
 }
